set(CMAKE_INCLUDE_CURRENT_DIR ON)

#echo of user defined options
message( " ")
message("EXTERNAL_SOLVERS_APPLICATION............... ${EXTERNAL_SOLVERS_APPLICATION}")
message("SOLID_MECHANICS_APPLICATION................ ${SOLID_MECHANICS_APPLICATION}")
message("PFEM_APPLICATION........................... ${PFEM_APPLICATION}")
message("PFEM_SOLID_MECHANICS_APPLICATION........... ${PFEM_SOLID_MECHANICS_APPLICATION}")
message("PFEM_FLUID_DYNAMICS_APPLICATION............ ${PFEM_FLUID_DYNAMICS_APPLICATION}")
message("CONTACT_MECHANICS_APPLICATION.............. ${CONTACT_MECHANICS_APPLICATION}")
message("CONSTITUTIVE_MODELS_APPLICATION............ ${CONSTITUTIVE_MODELS_APPLICATION}")
message("UMAT_APPLICATION........................... ${UMAT_APPLICATION}")
message("MACHINING_APPLICATION...................... ${MACHINING_APPLICATION}")
message("STRING_DYNAMICS_APPLICATION................ ${STRING_DYNAMICS_APPLICATION}")
message("CONVECTION_DIFFUSION_APPLICATION........... ${CONVECTION_DIFFUSION_APPLICATION}")
message("MESHING_APPLICATION ....................... ${MESHING_APPLICATION}")
message("STRUCTURAL_APPLICATION..................... ${STRUCTURAL_APPLICATION}")
message("STRUCTURAL_MECHANICS_APPLICATION........... ${STRUCTURAL_MECHANICS_APPLICATION}")
message("FLUID_DYNAMICS_APPLICATION................. ${FLUID_DYNAMICS_APPLICATION}")
message("PFEM2_APPLICATION.......................... ${PFEM2_APPLICATION}")
message("ALE_APPLICATION............................ ${ALE_APPLICATION}")
message("FSI_APPLICATION............................ ${FSI_APPLICATION}")
message("EMPIRE_APPLICATION......................... ${EMPIRE_APPLICATION}")
message("MIXED_ELEMENT_APPLICATION.................. ${MIXED_ELEMENT_APPLICATION}")
message("DEM_APPLICATION............................ ${DEM_APPLICATION}")
message("SWIMMING_DEM_APPLICATION................... ${SWIMMING_DEM_APPLICATION}")
message("CONSTITUTIVE_LAWS_APPLICATION.............. ${CONSTITUTIVE_LAWS_APPLICATION}")
message("THERMO_MECHANICAL_APPLICATION.............. ${THERMO_MECHANICAL_APPLICATION}")
message("OPENCL_APPLICATION......................... ${OPENCL_APPLICATION}")
message("MKL_SOLVERS_APPLICATION.................... ${MKL_SOLVERS_APPLICATION}")
message("MPI_SEARCH_APPLICATION..................... ${MPI_SEARCH_APPLICATION}")
message("METIS_APPLICATION.......................... ${METIS_APPLICATION}")
message("TRILINOS_APPLICATION....................... ${TRILINOS_APPLICATION}")
message("TURBULENT_FLOW_APPLICATION................. ${TURBULENT_FLOW_APPLICATION}")
message("BLOOD_FLOW_APPLICATION..................... ${BLOOD_FLOW_APPLICATION}")
message("PURE_DIFFUSION_APPLICATION................. ${PURE_DIFFUSION_APPLICATION}")
message("MESHLESS_APPLICATION....................... ${MESHLESS_APPLICATION}")
message("WIND_TURBINE_APPLICATION .................. ${WIND_TURBINE_APPLICATION}")
message("CLICK2CAST_APPLICATION .................... ${CLICK2CAST_APPLICATION}")
message("MULTISCALE_APPLICATION .................... ${MULTISCALE_APPLICATION}")
message("FREEZING_SOIL_APPLICATION.................. ${FREEZING_SOIL_APPLICATION}")
message("ADJOINT_FLUID_APPLICATION.................. ${ADJOINT_FLUID_APPLICATION}")
message("POROMECHANICS_APPLICATION.................. ${POROMECHANICS_APPLICATION}")
message("PARTICLE_MECHANICS_APPLICATION............. ${PARTICLE_MECHANICS_APPLICATION}")
message("FORMING_APPLICATION........................ ${FORMING_APPLICATION}")
message("DAM_APPLICATION............................ ${DAM_APPLICATION}")
message("SHAPE_OPTIMIZATION_APPLICATION............. ${SHAPE_OPTIMIZATION_APPLICATION}")
message("TOPOLOGY_OPTIMIZATION_APPLICATION.......... ${TOPOLOGY_OPTIMIZATION_APPLICATION}")
message("MY_LAPLACIAN_APPLICATION................... ${MY_LAPLACIAN_APPLICATION}")
message("LAGRANGIAN_MPM_APPLICATION................. ${LAGRANGIAN_MPM_APPLICATION}")
message("CONTACT_STRUCTURAL_MECHANICS_APPLICATION... ${CONTACT_STRUCTURAL_MECHANICS_APPLICATION}")
message("MAPPING_APPLICATION........................ ${MAPPING_APPLICATION}")
message("INCOMPRESSIBLE_FLUID_APPLICATION .......... ${INCOMPRESSIBLE_FLUID_APPLICATION}")
message("COMPRESSIBLE_POTENTIAL_FLOW_APPLICATION.... ${COMPRESSIBLE_POTENTIAL_FLOW_APPLICATION}")
message("HDF5_APPLICATION........................... ${HDF5_APPLICATION}")
message("SHALLOW_WATER_APPLICATION.................. ${SHALLOW_WATER_APPLICATION}")
message("EIGEN_SOLVERS_APPLICATION.................. ${EIGEN_SOLVERS_APPLICATION}")
message("STABILIZED_CFD_APPLICATION................. ${STABILIZED_CFD_APPLICATION}")
message( " ")


if(${INSTALL_PYTHON_FILES} MATCHES ON)
  install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/applications_interface.py DESTINATION applications)
endif(${INSTALL_PYTHON_FILES} MATCHES ON)

#include subdirectories for compilation
if(${EXTERNAL_SOLVERS_APPLICATION} MATCHES ON)
  add_subdirectory(ExternalSolversApplication)
endif(${EXTERNAL_SOLVERS_APPLICATION} MATCHES ON)

if(${SOLID_MECHANICS_APPLICATION} MATCHES ON)
  add_subdirectory(SolidMechanicsApplication)
endif(${SOLID_MECHANICS_APPLICATION} MATCHES ON)

if(${PFEM_APPLICATION} MATCHES ON)
  add_subdirectory(PfemApplication)
endif(${PFEM_APPLICATION} MATCHES ON)

if(${PFEM_SOLID_MECHANICS_APPLICATION} MATCHES ON)
  add_subdirectory(PfemSolidMechanicsApplication)
endif(${PFEM_SOLID_MECHANICS_APPLICATION} MATCHES ON)

if(${PFEM_FLUID_DYNAMICS_APPLICATION} MATCHES ON)
  add_subdirectory(PfemFluidDynamicsApplication)
endif(${PFEM_FLUID_DYNAMICS_APPLICATION} MATCHES ON)

if(${CONTACT_MECHANICS_APPLICATION} MATCHES ON)
  add_subdirectory(ContactMechanicsApplication)
endif(${CONTACT_MECHANICS_APPLICATION} MATCHES ON)

if(${CONSTITUTIVE_MODELS_APPLICATION} MATCHES ON)
  add_subdirectory(ConstitutiveModelsApplication)
endif(${CONSTITUTIVE_MODELS_APPLICATION} MATCHES ON)

if(${UMAT_APPLICATION} MATCHES ON)
  add_subdirectory(UmatApplication)
endif(${UMAT_APPLICATION} MATCHES ON)

if(${MACHINING_APPLICATION} MATCHES ON)
  add_subdirectory(MachiningApplication)
endif(${MACHINING_APPLICATION} MATCHES ON)

if(${STRING_DYNAMICS_APPLICATION} MATCHES ON)
  add_subdirectory(StringDynamicsApplication)
endif(${STRING_DYNAMICS_APPLICATION} MATCHES ON)

if(${CONVECTION_DIFFUSION_APPLICATION} MATCHES ON)
  add_subdirectory(convection_diffusion_application)
endif(${CONVECTION_DIFFUSION_APPLICATION} MATCHES ON)

if(${MESHING_APPLICATION} MATCHES ON)
  add_subdirectory(MeshingApplication)
endif(${MESHING_APPLICATION} MATCHES ON)

if(${STRUCTURAL_APPLICATION} MATCHES ON)
  add_subdirectory(structural_application)
endif(${STRUCTURAL_APPLICATION} MATCHES ON)

if(${STRUCTURAL_MECHANICS_APPLICATION} MATCHES ON)
  add_subdirectory(StructuralMechanicsApplication)
endif(${STRUCTURAL_MECHANICS_APPLICATION} MATCHES ON)

if(${FLUID_DYNAMICS_APPLICATION} MATCHES ON)
  add_subdirectory(FluidDynamicsApplication)
endif(${FLUID_DYNAMICS_APPLICATION} MATCHES ON)

if(${ALE_APPLICATION} MATCHES ON)
  add_subdirectory(ALEapplication)
endif(${ALE_APPLICATION} MATCHES ON)

if(${FSI_APPLICATION} MATCHES ON)
  add_subdirectory(FSIapplication)
endif(${FSI_APPLICATION} MATCHES ON)

if(${EMPIRE_APPLICATION} MATCHES ON)
  add_subdirectory(empire_application)
endif(${EMPIRE_APPLICATION} MATCHES ON)

if(${OPENCL_APPLICATION} MATCHES ON)
  add_subdirectory(OpenCLapplication)
endif(${OPENCL_APPLICATION} MATCHES ON)

if(${MIXED_ELEMENT_APPLICATION} MATCHES ON)
  add_subdirectory(MixedElementApplication)
endif(${MIXED_ELEMENT_APPLICATION} MATCHES ON)

if(${DEM_APPLICATION} MATCHES ON)
  add_subdirectory(DEM_application)
endif(${DEM_APPLICATION} MATCHES ON)

if(${SWIMMING_DEM_APPLICATION} MATCHES ON)
  add_subdirectory(swimming_DEM_application)
endif(${SWIMMING_DEM_APPLICATION} MATCHES ON)

if(${CONSTITUTIVE_LAWS_APPLICATION} MATCHES ON)
  add_subdirectory(constitutive_laws_application)
endif(${CONSTITUTIVE_LAWS_APPLICATION} MATCHES ON)

if(${ULF_APPLICATION} MATCHES ON)
  add_subdirectory(ULFapplication)
endif(${ULF_APPLICATION} MATCHES ON)

if(${THERMO_MECHANICAL_APPLICATION} MATCHES ON)
  add_subdirectory(ThermoMechanicalApplication)
endif(${THERMO_MECHANICAL_APPLICATION} MATCHES ON)

if(${MKL_SOLVERS_APPLICATION} MATCHES ON)
  add_subdirectory(mkl_solvers_application)
endif(${MKL_SOLVERS_APPLICATION} MATCHES ON)

if(${MPI_SEARCH_APPLICATION} MATCHES ON)
  add_subdirectory(mpi_search_application)
endif(${MPI_SEARCH_APPLICATION} MATCHES ON)

if(${METIS_APPLICATION} MATCHES ON)
  add_subdirectory(metis_application)
endif(${METIS_APPLICATION} MATCHES ON)

if(${TRILINOS_APPLICATION} MATCHES ON)
  add_subdirectory(trilinos_application)
endif(${TRILINOS_APPLICATION} MATCHES ON)

if(${TURBULENT_FLOW_APPLICATION} MATCHES ON)
  add_subdirectory(TurbulentFlowApplication)
endif(${TURBULENT_FLOW_APPLICATION} MATCHES ON)

if(${DEM_FEM_APPLICATION} MATCHES ON)
  add_subdirectory(DEM_FEM_Application)
endif(${DEM_FEM_APPLICATION} MATCHES ON)

if(${BLOOD_FLOW_APPLICATION} MATCHES ON)
  add_subdirectory(blood_flow_application)
endif(${BLOOD_FLOW_APPLICATION} MATCHES ON)

if(${PFEM2_APPLICATION} MATCHES ON)
  add_subdirectory(pfem_2_application)
endif(${PFEM2_APPLICATION} MATCHES ON)

if(${MESHLESS_APPLICATION} MATCHES ON)
  add_subdirectory(meshless_application)
endif(${MESHLESS_APPLICATION} MATCHES ON)

if(${WIND_TURBINE_APPLICATION} MATCHES ON)
  add_subdirectory(wind_turbine_application)
endif(${WIND_TURBINE_APPLICATION} MATCHES ON)

if(${CLICK2CAST_APPLICATION} MATCHES ON)
  add_subdirectory(Click2CastApplication)
endif(${CLICK2CAST_APPLICATION} MATCHES ON)

if(${MULTISCALE_APPLICATION} MATCHES ON)
  add_subdirectory(MultiScaleApplication)
endif(${MULTISCALE_APPLICATION} MATCHES ON)

if(${ADJOINT_FLUID_APPLICATION} MATCHES ON)
  add_subdirectory(AdjointFluidApplication)
endif(${ADJOINT_FLUID_APPLICATION} MATCHES ON)

if(${NURBS_APPLICATION} MATCHES ON)
  add_subdirectory(nurbs_application)
endif(${NURBS_APPLICATION} MATCHES ON)

if(${FREEZING_SOIL_APPLICATION} MATCHES ON)
  add_subdirectory(freezing_soil_application)
endif(${FREEZING_SOIL_APPLICATION} MATCHES ON)

if(${POROMECHANICS_APPLICATION} MATCHES ON)
  add_subdirectory(PoromechanicsApplication)
endif(${POROMECHANICS_APPLICATION} MATCHES ON)

if(${PARTICLE_MECHANICS_APPLICATION} MATCHES ON)
  add_subdirectory(ParticleMechanicsApplication)
endif(${PARTICLE_MECHANICS_APPLICATION} MATCHES ON)

if(${FORMING_APPLICATION} MATCHES ON)
  add_subdirectory(Forming_Application)
endif(${FORMING_APPLICATION} MATCHES ON)

if(${DAM_APPLICATION} MATCHES ON)
  add_subdirectory(DamApplication)
endif(${DAM_APPLICATION} MATCHES ON)

if(${SHAPE_OPTIMIZATION_APPLICATION} MATCHES ON)
  add_subdirectory(ShapeOptimizationApplication)
endif(${SHAPE_OPTIMIZATION_APPLICATION} MATCHES ON)

if(${TOPOLOGY_OPTIMIZATION_APPLICATION} MATCHES ON)
  add_subdirectory(TopologyOptimizationApplication)
endif(${TOPOLOGY_OPTIMIZATION_APPLICATION} MATCHES ON)

if(${MY_LAPLACIAN_APPLICATION} MATCHES ON)
  add_subdirectory(MyLaplacianApplication)
endif(${MY_LAPLACIAN_APPLICATION} MATCHES ON)

if(${LAGRANGIAN_MPM_APPLICATION} MATCHES ON)
  add_subdirectory(LagrangianMPMApplication)
endif(${LAGRANGIAN_MPM_APPLICATION} MATCHES ON)

if(${CONTACT_STRUCTURAL_MECHANICS_APPLICATION} MATCHES ON)
  add_subdirectory(ContactStructuralMechanicsApplication)
endif(${CONTACT_STRUCTURAL_MECHANICS_APPLICATION} MATCHES ON)

if(${MAPPING_APPLICATION} MATCHES ON)
  add_subdirectory(MappingApplication)
endif(${MAPPING_APPLICATION} MATCHES ON)

if(${INCOMPRESSIBLE_FLUID_APPLICATION} MATCHES ON)
  add_subdirectory(incompressible_fluid_application)
endif(${INCOMPRESSIBLE_FLUID_APPLICATION} MATCHES ON)

if(${COMPRESSIBLE_POTENTIAL_FLOW_APPLICATION} MATCHES ON)
  add_subdirectory(CompressiblePotentialFlowApplication)
endif(${COMPRESSIBLE_POTENTIAL_FLOW_APPLICATION} MATCHES ON)

if(${HDF5_APPLICATION} MATCHES ON)
  add_subdirectory(HDF5Application)
endif(${HDF5_APPLICATION} MATCHES ON)

if(${SHALLOW_WATER_APPLICATION} MATCHES ON)
  add_subdirectory(ShallowWaterApplication)
endif(${SHALLOW_WATER_APPLICATION} MATCHES ON)

if(${EIGEN_SOLVERS_APPLICATION} MATCHES ON)
  add_subdirectory(EigenSolversApplication)
endif(${EIGEN_SOLVERS_APPLICATION} MATCHES ON)

if(${STABILIZED_CFD_APPLICATION} MATCHES ON)
  add_subdirectory(StabilizedCFDApplication)
endif(${STABILIZED_CFD_APPLICATION} MATCHES ON)

# get_property(inc_dirs DIRECTORY PROPERTY INCLUDE_DIRECTORIES)
# message("applications subdir inc_dirs = ${inc_dirs}")
